<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <include layout="@layout/include_titlebar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/label_from_account" />

            <Spinner
                android:id="@+id/deteditor_from"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/array_from" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/label_to_account" />

            <Spinner
                android:id="@+id/deteditor_to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:entries="@array/array_to" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Date" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/deteditor_date"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="text" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/label_money" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/deteditor_money"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/label_note" />

            <EditText
                android:id="@+id/deteditor_note"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:maxLines="2" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/deteditor_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Create"
            android:text="@string/cact_create" />

        <Button
            android:id="@+id/deteditor_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_cancel"
            android:onClick="Cancel"
            android:text="@string/cact_cancel" />
    </LinearLayout>

    <ListView
        android:id="@+id/cashList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:divider="@android:color/background_light"
        android:dividerHeight="1dp" >
    </ListView>

</LinearLayout>